fix: header align with nav

--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,17 +3,20 @@ header {
     position: relative;
     display: flex;
     align-items: center;
-    padding-left: 5rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color: $white;
-    gap: 2rem;
-    margin: 0;
-    width: 100vw;
 
     img {
-        height: 45px;
+        width: 80%;
+    }
+
+    .link-img-home {
+        width: 10%;
+        padding-left: 5rem;
+        display: flex;
+        align-items: center;
     }
 
     nav {
