--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -9,7 +9,7 @@
 .hero-left-home {
     width: 50%;
     padding-top: 200px;
-    padding-bottom: 375px;
+    padding-bottom: 365px;
     padding-left: 5rem;
     display: flex;
     flex-direction: column;
